// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> should renders correctly 1`] = `
<Headerstyle__Container>
  <Headerstyle__TitleContainer>
    <Tooltip
      id="tooltip-title"
      label="global.rename"
      placement="top"
    >
      <div
        className="input-title"
      >
        <Field
          component={[Function]}
          disableValidation={true}
          disabled={false}
          id="title"
          name="title"
          onBlur={[Function]}
          onFocus={[Function]}
          style={
            Object {
              "width": "100px",
            }
          }
          type="text"
        />
        <div
          className="wrapper-title"
          style={
            Object {
              "maxWidth": "1024px",
              "visibility": "visible",
            }
          }
        >
          <span>
            Ceci est un titre
          </span>
        </div>
      </div>
    </Tooltip>
    <Headerstyle__ButtonSendContainer>
      <Headerstyle__ButtonSendMail
        disabled={false}
        type="submit"
      >
        check-and-send
      </Headerstyle__ButtonSendMail>
    </Headerstyle__ButtonSendContainer>
  </Headerstyle__TitleContainer>
  <Headerstyle__NavContainer>
    <li>
      <NavLink
        activeClassName="selected"
        exact={true}
        to="/"
      >
        global.params
      </NavLink>
    </li>
    <li>
      <NavLink
        activeClassName="selected"
        exact={true}
        to="/content"
      >
        global.contenu
      </NavLink>
    </li>
    <li>
      <NavLink
        activeClassName="selected"
        exact={true}
        to="/sending"
      >
        global-sending
      </NavLink>
    </li>
  </Headerstyle__NavContainer>
</Headerstyle__Container>
`;

exports[`<Header /> should renders correctly when disabled 1`] = `
<Headerstyle__Container>
  <Headerstyle__TitleContainer>
    <div
      className="wrapper-title not-editable"
      style={
        Object {
          "maxWidth": "1024px",
        }
      }
    >
      <span>
        Ceci est un titre
      </span>
    </div>
    <LabelState
      color="#54BAA6"
      label="global-sent"
    />
  </Headerstyle__TitleContainer>
  <Headerstyle__NavContainer>
    <li>
      <NavLink
        activeClassName="selected"
        exact={true}
        to="/"
      >
        global.params
      </NavLink>
    </li>
    <li>
      <NavLink
        activeClassName="selected"
        exact={true}
        to="/content"
      >
        global.contenu
      </NavLink>
    </li>
    <li>
      <NavLink
        activeClassName="selected"
        exact={true}
        to="/sending"
      >
        global-sending
      </NavLink>
    </li>
  </Headerstyle__NavContainer>
</Headerstyle__Container>
`;

exports[`<Header /> should renders correctly when error 1`] = `
<Headerstyle__Container>
  <Headerstyle__TitleContainer>
    <Tooltip
      id="tooltip-title"
      label="global.rename"
      placement="top"
    >
      <div
        className="input-title"
      >
        <Field
          component={[Function]}
          disableValidation={false}
          disabled={false}
          id="title"
          name="title"
          onBlur={[Function]}
          onFocus={[Function]}
          style={
            Object {
              "width": "100px",
            }
          }
          type="text"
        />
        <div
          className="wrapper-title"
          style={
            Object {
              "maxWidth": "1024px",
              "visibility": "visible",
            }
          }
        >
          <span>
            Ceci est un titre
          </span>
        </div>
      </div>
    </Tooltip>
    <Headerstyle__ButtonSendContainer>
      <Headerstyle__ButtonSendMail
        disabled={false}
        type="submit"
      >
        check-and-send
      </Headerstyle__ButtonSendMail>
      <Headerstyle__ErrorContainer>
        <p>
          <Icon
            color="#dc3545"
            name="danger"
            size={14}
          />
          admin.fields.question_choice.required
        </p>
        <div>
          <p
            key="0"
          >
            <span>
              1. 
            </span>
            <FormattedMessage
              id="key-word"
              values={
                Object {
                  "fieldName": "blabla-field",
                }
              }
            />
          </p>
        </div>
      </Headerstyle__ErrorContainer>
    </Headerstyle__ButtonSendContainer>
  </Headerstyle__TitleContainer>
  <Headerstyle__NavContainer>
    <li>
      <NavLink
        activeClassName="selected"
        exact={true}
        to="/"
      >
        global.params
      </NavLink>
    </li>
    <li>
      <NavLink
        activeClassName="selected"
        exact={true}
        to="/content"
      >
        global.contenu
      </NavLink>
    </li>
    <li>
      <NavLink
        activeClassName="selected"
        exact={true}
        to="/sending"
      >
        global-sending
      </NavLink>
    </li>
  </Headerstyle__NavContainer>
</Headerstyle__Container>
`;
